# local-ai-chat

./: README.md  chat.py  coeiroink.py  invoke-shiftjis.yaml  invoke-utf8.yaml  invoke.yaml  pyproject.toml  recog.py  tasks.py  voicevox.py  vosk_asr.py  whisper_asr.py
src/: aivisspeech.py  chat.py  coeiroink.py  ov.py  voicevox.py  vosk_asr.py
src/asr/: base.py  temp.py  vosk_asr.py  whisper_asr.py
src/tts/: aivisspeech.py  base.py  coeiroink.py  voicevox.py
