[project]
name = "local-ai-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.13",
    "faster-whisper>=1.1.1",
    "invoke>=2.2.0",
    "langchain-ollama>=0.2.3",
    "requests>=2.32.3",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "vosk>=0.3.45",
    "webrtcvad>=2.0.10",
]

[project.optional-dependencies]
ov = [
    "openvino-genai>=2025.0.0.0",
    "optimum[openvino]>=1.24.0",
]
